tests/vertical-slice/accept/string_slice_closed_prefix.hew
fn main() -> i64 {
    let s: string = "héllo";
    let slice: string = s[0..2];
    println(slice);
    slice.len()
}
